--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>plugin</artifactId>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
 
     <repositories>
         <repository>
@@ -25,6 +25,10 @@
         <repository>
             <id>minecraft-repo</id>
             <url>https://libraries.minecraft.net/</url>
+        </repository>
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
         </repository>
     </repositories>
 
@@ -75,6 +79,11 @@
             <artifactId>nms_v1_15_R1</artifactId>
             <version>1.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.comphenix.protocol</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>4.5.0</version>
         </dependency>
     </dependencies>
 
