Fixed Protocollib conflict

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ main: org.kovalski.corpsemaster.Main
 api-version: 1.13
 authors: [Kovalski]
 description: Corpses in latest versions
+loadbefore: [ProtocolLib]
 commands:
   corpsemaster:
     description: Reload Command
